--- a/apps/profiles/templates/profiles/coach/coach_profile_view.html
+++ b/apps/profiles/templates/profiles/coach/coach_profile_view.html
@@ -1,141 +1,158 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Coach Profile{% endblock %}
-
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'profiles/css/coach/coach_profile_views.css' %}">
+{% comment %} <link rel="stylesheet" href="{% static 'profiles/css/coach_profile_views.css' %}"> {% endcomment %}
 {% endblock %}
-
-
-
 {% block content %}
-<div class="profile-container">
+<div class="container mt-4">
     <!-- Profile Header -->
-    <div class="profile-header">
-        <div class="avatar-section">
-            {% if profile.avatar %}
-                <img src="{{ profile.avatar.url }}" alt="{{ profile.user.username }}'s Avatar" class="avatar">
-            {% else %}
-                <img src="{% static 'img/default-avatar.png' %}" alt="Default Avatar" class="avatar">
-            {% endif %}
+    <div class="row bg-white p-4 rounded shadow-sm mb-4">
+        <div class="col-lg-4 text-center">
+            <div class="avatar-section">
+                {% if profile.avatar %}
+                    <img src="{{ profile.avatar.url }}" class="rounded-circle img-fluid avatar" alt="{{ profile.user.username }}">
+                {% else %}
+                    <img src="{% static 'img/default-avatar.png' %}" class="rounded-circle img-fluid avatar" alt="Default Avatar">
+                {% endif %}
+            </div>
         </div>
-        <div class="profile-info">
-            <h1>{{ profile.user.username }}</h1>
+        <div class="col-lg-8">
+            <h1 class="mb-3">{{ profile.user.username }}</h1>
             <p><strong>Bio:</strong> {{ profile.bio }}</p>
             <p><strong>Experience:</strong> {{ profile.years_of_experience }} years</p>
             <p><strong>Location:</strong> {{ profile.city.name }}, {{ profile.country.name }}</p>
             <p><strong>Specialties:</strong> {{ profile.specialties }}</p>
             <p><strong>Hourly Rate:</strong> ${{ profile.hourly_rate }}</p>
+            <a href="{% url 'profiles:edit_coach_profile' %}" class="btn btn-primary mt-3">Edit Profile</a>
         </div>
     </div>
 
-    <!-- Edit Profile Button -->
-    <div class="edit-profile-btn">
-        <a href="{% url 'profiles:edit_coach_profile' %}" class="btn btn-primary">Edit Profile</a>
-    </div>
+    <hr>
 
     <!-- Social Media Links -->
-    <div class="social-media">
+    <div class="social-media mt-4">
         <h3>Connect with me</h3>
-        <ul>
+        <ul class="list-inline">
             {% if profile.facebook_profile_url %}
-            <li><a href="{{ profile.facebook_profile_url }}" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                <li class="list-inline-item">
+                    <a href="{{ profile.facebook_profile_url }}" target="_blank" class="btn btn-primary">
+                        <i class="fab fa-facebook-f"></i> Facebook
+                    </a>
+                </li>
             {% endif %}
             {% if profile.instagram_profile_url %}
-            <li><a href="{{ profile.instagram_profile_url }}" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+                <li class="list-inline-item">
+                    <a href="{{ profile.instagram_profile_url }}" target="_blank" class="btn btn-danger">
+                        <i class="fab fa-instagram"></i> Instagram
+                    </a>
+                </li>
             {% endif %}
             {% if profile.twitter_profile_url %}
-            <li><a href="{{ profile.twitter_profile_url }}" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
-            {% endif %}
-            {% if profile.youtube_profile_url %}
-            <li><a href="{{ profile.youtube_profile_url }}" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-            {% endif %}
-            {% if profile.tiktok_profilel_url %}
-            <li><a href="{{ profile.tiktok_profilel_url }}" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a></li>
+                <li class="list-inline-item">
+                    <a href="{{ profile.twitter_profile_url }}" target="_blank" class="btn btn-info">
+                        <i class="fab fa-twitter"></i> Twitter
+                    </a>
+                </li>
             {% endif %}
             {% if profile.linkedin_profile_url %}
-            <li><a href="{{ profile.linkedin_profile_url }}" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
+                <li class="list-inline-item">
+                    <a href="{{ profile.linkedin_profile_url }}" target="_blank" class="btn btn-primary">
+                        <i class="fab fa-linkedin-in"></i> LinkedIn
+                    </a>
+                </li>
             {% endif %}
         </ul>
     </div>
 
     <!-- Certifications -->
-    <div class="certifications">
-        <h3>Certifications</h3>
-
-        {% if request.user == profile.user %}
-            <div class="pictures-btn">
+    <div class="certifications mt-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3>Certifications</h3>
+            {% if request.user == profile.user %}
                 <a href="{% url 'profiles:view_coach_certifications' %}" class="btn btn-secondary">Manage Certifications</a>
-            </div>
             {% endif %}
+        </div>
 
-        <div class="certifications-list">
+        <div class="row">
             {% for certification in profile.certifications.all %}
-            <div class="certification-item">
-                <a href="{{ certification.file.url }}" target="_blank">{{ certification.description }}</a>
-            </div>
+                <div class="col-md-4 mb-3">
+                    <a href="{{ certification.file.url }}" target="_blank" class="btn btn-outline-secondary w-100">
+                        {{ certification.description }}
+                    </a>
+                </div>
             {% endfor %}
         </div>
     </div>
 
-    <!-- Pictures Section -->
-    <div class="pictures-section">
-        <div class="client-pictures">
-            <h3>Client Progress</h3>
-
+    <!-- Product Plans Section -->
+    <div class="product-plans-section mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3>Available Plans</h3>
             {% if request.user == profile.user %}
-            <div class="pictures-btn">
-                <a href="{% url 'profiles:coach_client_view_pictures' %}" class="btn btn-secondary">Manage Pictures</a>
-            </div>
+                <a href="{% url 'plan_management:manage_product_plans' %}" class="btn btn-secondary">Manage Plans</a>
             {% endif %}
-
-            <div class="pictures-grid">
-                {% for picture in profile.client_pictures.all %}
-                <div class="picture-item">
-                    <img src="{{ picture.image.url }}" alt="Client Picture">
-                </div>
-                {% endfor %}
-            </div>
-
         </div>
-        <div class="coach-pictures">
-            <h3>My Journey</h3>
 
-            {% if request.user == profile.user %}
-            <div class="pictures-btn">
-                <a href="{% url 'profiles:view_pictures' %}" class="btn btn-secondary">Manage Pictures</a>
-            </div>
-            {% endif %}
-            
-            <div class="pictures-grid">
-                {% for picture in profile.coach_pictures.all %}
-                <div class="picture-item">
-                    <img src="{{ picture.image.url }}" alt="Coach Picture">
-                </div>
-                {% endfor %}
-            </div>
+        <div class="row" id="plans-container">
+            <!-- Plans will be dynamically loaded using JavaScript -->
         </div>
     </div>
 
-     <!-- Availability -->
-    <div class="availability">
-        <h3>Availability</h3>
-        {% if request.user == profile.user %}
-        <div class="availability-btn">
-            <a href="{% url 'profiles:view_availabilities' %}" class="btn btn-secondary">Manage Availability</a>
+    <!-- Client Progress Pictures Section -->
+    <div class="pictures-section mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3>Client Progress</h3>
+            {% if request.user == profile.user %}
+                <a href="{% url 'profiles:coach_client_view_pictures' %}" class="btn btn-secondary">Manage Pictures</a>
+            {% endif %}
         </div>
-        <ul>
+        <div class="row">
+            {% for picture in profile.client_pictures.all %}
+                <div class="col-md-4 mb-3">
+                    <img src="{{ picture.image.url }}" alt="Client Progress" class="img-fluid rounded">
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <!-- Coach Journey Pictures Section -->
+    <div class="pictures-section mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3>My Journey</h3>
+            {% if request.user == profile.user %}
+                <a href="{% url 'profiles:view_pictures' %}" class="btn btn-secondary">Manage Pictures</a>
+            {% endif %}
+        </div>
+        <div class="row">
+            {% for picture in profile.coach_pictures.all %}
+                <div class="col-md-4 mb-3">
+                    <img src="{{ picture.image.url }}" alt="Coach Journey" class="img-fluid rounded">
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <!-- Availability Section -->
+    <div class="availability mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3>Availability</h3>
+            {% if request.user == profile.user %}
+                <a href="{% url 'profiles:view_availabilities' %}" class="btn btn-secondary">Manage Availability</a>
+            {% endif %}
+        </div>
+        <ul class="list-group">
             {% for availability in profile.availabilities.all %}
-            <li>{{ availability.day_of_week }}: {{ availability.start_time|date:"g:i A" }} - {{ availability.end_time|date:"g:i A" }}</li>
+                <li class="list-group-item">
+                    {{ availability.day_of_week }}: {{ availability.start_time|date:"g:i A" }} - {{ availability.end_time|date:"g:i A" }}
+                </li>
             {% endfor %}
         </ul>
-        
-        {% endif %}
     </div>
 </div>
 {% endblock %}
 
-
 {% block extra_js %}
 <script src="{% static 'profiles/js/coach/coach_profile_views.js' %}"></script>
+<script src="{% static 'js/coach/view_coach_product_plans.js' %}"></script>
 {% endblock %}
